--- a/Backend/pipelines/Dockerfile
+++ b/Backend/pipelines/Dockerfile
@@ -14,7 +14,7 @@ RUN ls -lah target
 FROM openjdk:11-jre-slim
 
 # copy jar from the first stage
-COPY --from=builder target/employee_app-0.0.1-SNAPSHOT.jar /srv/app.jar
+COPY --from=builder target/auction-0.0.1-SNAPSHOT.jar /srv/app.jar
 
 EXPOSE 8080
 
