--- a/Backend/src/main/resources/application-prod.properties
+++ b/Backend/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Apevuvajy42
 
 # Client url
-spring.client.url=http://34.140.181.128:8082
+spring.client.url=http://35.205.252.53:8082/
 
 # Liquibase
 spring.liquibase.drop-first=false
