--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.liquibase.change-log=classpath:db/migration/migration.xml
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=auction.lot1@gmail.com
-spring.mail.password=qweqweqasd12
+spring.mail.password=asdSsag21gAsf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
